<resources>
    <string name="app_name">쉘위스캔</string>

    <!-- 타이틀 -->
    <string name="title_review">리뷰</string>
    <string name="title_checklist">체크리스트</string>
    <string name="title_parking">주차정산</string>
    <string name="title_mypage">마이</string>
    <string name="title_scan">스캔앤고</string>
    <string name="title_cart_entrance">Profile</string>
    <string name="title_cart_login">장바구니 접속</string>
    <string name="title_nickname">닉네임</string>
    <string name="title_hint_nickname">닉네임을 입력하세요.</string>
    <string name="title_password">비밀번호</string>
    <string name="title_hint_password">비밀번호를 입력하세요.</string>

    <!-- 마이페이지 -->
    <string name="fragment_mypage_review">리뷰 관리</string>
    <string name="fragment_mypage_purchase">구매 내역</string>
    <string name="fragment_mypage_logout">로그아웃</string>
    <string name="fragment_mypage_withdraw">회원탈퇴</string>

    <!-- 장바구니 -->
    <string name="fragment_scan_cart">장바구니</string>
    <string name="fragment_scan_sharelist">일행 요청 리스트</string>
    <string name="fragment_scan_externalsharelist">요청 리스트</string>
    <string name="fragment_scan_cartlist_not_found">상품을 스캔해주세요!</string>
    <string name="fragment_scan_external_cartlist_not_found">장바구니에 담긴 상품이 없어요.</string>
    <string name="fragment_scan_success">상품이 장바구니에 추가되었습니다.</string>
    <string name="fragment_scan_fail">현대식품관에 등록되지 않은 상품입니다.</string>

    <!-- 모달 -->
    <string name="modal_go_setting">설정으로 이동</string>
    <string name="modal_camera_title">카메라 권한이 필요합니다.</string>
    <string name="modal_camera_message">바코드 스캔을 위해 카메라 권한이 필요합니다. 설정에서 권한을 허용해 주세요.</string>
    <string name="modal_cancel">취소</string>
    <string name="modal_check">확인</string>
    <string name="modal_external_invite">일행 초대</string>
    <string name="modal_btn_kakao">카카오톡</string>
    <string name="modal_btn_url">URL</string>

    <!-- 로그인 -->
    <string name="fragment_login">Login</string>
    <string name="fragment_login_id">아이디</string>
    <string name="fragment_login_password">비밀번호</string>
    <string name="fragment_login_hint_id">아이디를 입력하세요.</string>
    <string name="fragment_login_hint_password">비밀번호를 입력하세요.</string>
    <string name="fragment_login_signup_comment">아직 회원이 아니신가요?</string>
    <string name="fragment_login_signup">회원가입</string>

    <!-- 회원가입 -->
    <string name="fragment_signup">Sign Up</string>
    <string name="fragment_signup_check_id">중복확인</string>
    <string name="fragment_signup_check_password">비밀번호 확인</string>
    <string name="fragment_signup_name">이름</string>
    <string name="fragment_signup_age">나이</string>
    <string name="fragment_signup_gender">성별</string>
    <string name="fragment_signup_male">남</string>
    <string name="fragment_signup_female">여</string>
    <string name="fragment_signup_phone">전화번호</string>
    <string name="fragment_signup_car">차량번호</string>
    <string name="fragment_signup_hint_id">heendy123</string>
    <string name="fragment_signup_hint_password">8~20글자의 비밀번호를 입력해주세요.</string>
    <string name="fragment_signup_hint_check_password">비밀번호를 다시 입력해주세요.</string>
    <string name="fragment_signup_hint_name">김흰디</string>
    <string name="fragment_signup_hint_age">7</string>
    <string name="fragment_signup_hint_phone">01000000000</string>
    <string name="fragment_signup_hint_car">000가0000</string>

    <!-- 회원 정보 수정 -->
    <string name="fragment_modify_member">수정하기</string>

    <!-- 채팅 -->
    <string name="fragment_chat_message">메시지를 입력하세요.</string>

    <!-- 구매 내역 -->
    <string name="fragment_payment_nodata">구매 내역이 없습니다.</string>

    <!-- 리뷰 관리 -->
    <string name="fragment_my_review_written">작성한 리뷰</string>
    <string name="fragment_my_review_write">리뷰 작성</string>
    <string name="fragment_my_review_nodata">작성한 리뷰가 없습니다.</string>
    <string name="fragment_review_upload_select">업로드 영상 선택</string>
    <string name="fragment_my_review_upload">업로드</string>
    <string name="fragment_my_review_upload_delete">삭제</string>
    <string name="fragment_review_image">리뷰 이미지</string>

    <!-- 체크리스트 -->
    <string name="fragment_checklist_add">추가</string>
    <string name="fragment_checklist_nodata">체크 리스트 항목을 추가해주세요!</string>

    <!-- 공유 체크리스트 -->
    <string name="fragment_sharelist_not_found">아직 일행이 상품을 요청하지 않았어요!</string>
    <string name="fragment_sharelist_external_not_found">요청 리스트를 추가해주세요!</string>
    <string name="fragment_sharelist_external_search">상품을 검색해주세요.</string>
    <string name="fragment_sharelist_success">상품이 요청되었습니다.</string>

    <!-- 결제 -->
    <string name="fragment_payment_pay">결제하기</string>
    <string name="fragment_payment_method">결제 수단</string>
    <string name="fragment_payment_product">상품</string>
    <string name="fragment_payment_totalprice">총 결제 금액</string>
    <string name="fragment_payment_agree">결제내역을 확인하였으며 구매에 동의합니다.</string>
    <string name="fragment_payment_external">일행에게 결제 요청하기</string>
    <string name="fragment_recommend">추가 상품 제안</string>
    <string name="fragment_recommend_info1">원만 추가하면 주차 정산이</string>
    <string name="fragment_recommend_info2">&#160;무료</string>
    <string name="fragment_recommend_info3">예요!</string>
    <string name="fragment_recommend_button">그냥 결제할게요!</string>
    <string name="fragment_payment_card_thehundai">더현대 닷컴</string>
    <string name="fragment_payment_card_appcard_title">앱 카드 결제</string>
    <string name="fragment_payment_card_appcard_body">현대백화점 앱에 등록한 카드로 결제하기</string>
    <string name="fragment_payment_card_easy_title">간편 결제</string>
    <string name="fragment_payment_card_easy_body">간편 결제 서비스 등록 후 카드 비밀번호로 결제하기</string>
    <string name="fragment_payment_card_general_title">일반 결제</string>
    <string name="fragment_payment_card_general_body">카드정보를 입력하여 결제하기</string>
    <string name="fragment_qr_title">스캔앤고 결제 완료</string>
    <string name="fragment_qr_body">전용 출구에서 QR코드를 스캔해주세요.</string>
    <string name="fragment_qr_button">결제 내역 확인하기</string>
    <string name="fragment_payment_done">결제가 완료되었습니다.</string>

    <!-- 챗봇 -->
    <string name="fragment_chatbot_comment">젤뽀가 안내하는 상품의 추가 버튼을 클릭하면 체크리스트에 추가돼요!</string>

    <!-- 버튼 -->
    <string name="btn_scanner_chat">채팅</string>
    <string name="btn_scanner_additional">일행초대</string>

    <!-- 주차 정산 -->
    <string name="fragment_parking_payment_message_empty">영수증 할인은 자동으로 이뤄집니다!</string>
    <string name="fragment_parking_entrance_time">입차 시간</string>
    <string name="fragment_parking_time">주차 시간</string>
    <string name="fragment_parking_discount">영수증 할인</string>
    <string name="fragment_parking_fee_time">정산 필요 시간</string>
    <string name="fragment_parking_fee">정산 금액</string>
    <string name="btn_parking_payment">정산하기</string>
    <string name="btn_parking_payment_complete">무료 출차가 가능합니다!</string>
    <string name="fragment_parking_cart_guide">영수증 할인 금액은 현재 장바구니에 담긴 금액으로 추정됩니다.</string>

</resources>