<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/light_green"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".domain.payment.view.ui.PaymentCardFragment">

    <!-- 툴바 -->
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_horizontal_margin"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_payment_card_thehundai"
            android:textColor="@color/black"
            android:textFontWeight="1000"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/tv_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="150,000"
                android:textColor="@color/main"
                android:textFontWeight="800"
                android:textSize="25sp"
                android:layout_marginRight="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="원"
                android:textColor="@color/black"
                android:textFontWeight="800"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- 앱 카드 결제 -->
        <LinearLayout
            android:id="@+id/layout_app_card_payment"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="@dimen/common_vertical_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintCircleRadius="15dp"
            android:background="@drawable/bg_checklist"
            android:paddingTop="@dimen/common_vertical_margin"
            android:paddingBottom="28dp"
            android:paddingHorizontal="30dp">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:text="@string/fragment_payment_card_appcard_title"
                    android:textColor="@color/black"
                    android:textFontWeight="1000"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_payment_card_appcard_body"
                    android:textColor="@color/gray"
                    android:textFontWeight="600"
                    android:textSize="13sp"/>
            </LinearLayout>

            <ImageButton
                android:layout_width="10dp"
                android:layout_height="30dp"
                android:layout_marginLeft="3dp"
                android:layout_gravity="center_vertical|end"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_arrow_right_green" />
        </LinearLayout>

        <!-- 간편 결제 -->
        <LinearLayout
            android:id="@+id/layout_easy_payment"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintCircleRadius="15dp"
            android:background="@drawable/bg_checklist"
            android:paddingTop="@dimen/common_vertical_margin"
            android:paddingBottom="28dp"
            android:paddingHorizontal="30dp">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:text="@string/fragment_payment_card_easy_title"
                    android:textColor="@color/black"
                    android:textFontWeight="1000"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_payment_card_easy_body"
                    android:textColor="@color/gray"
                    android:textFontWeight="600"
                    android:textSize="13sp"/>
            </LinearLayout>

            <ImageButton
                android:layout_width="10dp"
                android:layout_height="30dp"
                android:layout_marginLeft="3dp"
                android:layout_gravity="center_vertical|end"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_arrow_right_green" />
        </LinearLayout>

        <!-- 일반 결제 -->
        <LinearLayout
            android:id="@+id/layout_general_payment"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintCircleRadius="15dp"
            android:background="@drawable/bg_checklist"
            android:paddingTop="@dimen/common_vertical_margin"
            android:paddingBottom="28dp"
            android:paddingHorizontal="30dp">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:text="@string/fragment_payment_card_general_title"
                    android:textColor="@color/black"
                    android:textFontWeight="1000"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_payment_card_general_body"
                    android:textColor="@color/gray"
                    android:textFontWeight="600"
                    android:textSize="13sp"/>
            </LinearLayout>

            <ImageButton
                android:layout_width="10dp"
                android:layout_height="30dp"
                android:layout_marginLeft="3dp"
                android:layout_gravity="center_vertical|end"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_arrow_right_green" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>