<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cart_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_green"
    tools:context=".domain.cart.view.ui.CartLoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_cart_entrance"
        android:fontFamily="@font/happiness_sans_title"
        android:textSize="50sp"
        android:textColor="@color/main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cart_login_layout" />

    <!-- 흰색 배경 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cart_login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_rounded_top_left"
        android:layout_marginTop="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_scroll_inner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="50dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/nickname_card"
                    android:layout_width="380dp"
                    android:layout_height="130dp"
                    android:layout_marginHorizontal="@dimen/common_horizontal_margin"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_white_shadow"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/nickname_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/title_nickname"
                        android:textColor="@color/black"
                        android:textFontWeight="1000"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/tv_nickname_input"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="10dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/title_hint_nickname"
                        android:inputType="text"
                        android:padding="12dp"
                        android:textColor="@color/gray"
                        android:textFontWeight="700"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nickname_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/password_card"
                    android:layout_width="380dp"
                    android:layout_height="130dp"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_white_shadow"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nickname_card">

                    <TextView
                        android:id="@+id/password_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/title_password"
                        android:textColor="@color/black"
                        android:textFontWeight="1000"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/tv_password_input"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="10dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/title_hint_password"
                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:paddingHorizontal="0dp"
                        android:textColor="@color/gray"
                        android:textFontWeight="700"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/password_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/cart_login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_rounded_main"
                    android:text="@string/title_cart_login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textFontWeight="1000"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_card" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
